fixed flickering

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -172,7 +172,7 @@ body {
  * Desktop first approach
  * Check in last for media queries
 */
-header {
+.desk-header  {
     background-image: linear-gradient(#010101, #181818);
     display: flex;
     align-items: center;
@@ -183,15 +183,11 @@ header {
     padding: 0px 5%;
 }
 
-#hamberger-menu {
+.mobile-header {
     display: none;
 }
 
-#hamberger-x {
-    display: none;
-}
-
-header div.branding {
+.desk-header div.brand {
     flex-grow: 8;
     /* height: 100px; */
 }
@@ -200,7 +196,7 @@ header div.branding {
     flex-grow: 1;
 }
 
-header nav {
+.desk-header  nav {
     flex-grow: 3;
 }
 
@@ -243,6 +239,11 @@ header nav a:hover {
     color: #E89223;
 }
 
+.active {
+    color: #E89223;
+    font-weight: 600;
+    font-size: larger;
+}
 
 .brand{
     /* margin-left: 10px; */
@@ -282,6 +283,13 @@ section.cta {
     color: #00CDAC;
     font-size: 5vw;
     font-weight: 700;
+
+}
+.cta-heading > span{
+    /* padding-top: 8vw; */
+    color: #E89223;
+    /* font-size: 5vw;
+    font-weight: 700; */
 
 }
 
@@ -325,14 +333,14 @@ section.cta {
 
 @media(max-width: 730px){
     /*Header Part*/
-    header {
+    .desk-header{
+        display: none;
+    }
+    .mobile-header {
         display: block;
         padding: 0;
         height: inherit;
         border-bottom: none;
-    }
-    #cta-header {
-        display: none;
     }
 
     .branding{
@@ -345,10 +353,10 @@ section.cta {
         
     }
     #hamberger-x {
-        /* display: inline-block; */
+        display: none;
         margin-left: auto;
     }
-    header  nav {
+    .mobile-header  nav {
         display: none;
         /* display: flex; */
         justify-content: center;
@@ -359,12 +367,12 @@ section.cta {
         transform: translateY(-366px) translateX(366px);
         transition: transform 0.5s ease-in-out;
     }
-    header  nav.horizTranslate {
+    .mobile-header  nav.horizTranslate {
         transform: translateY(-8px) translateX(0px);
         /* transition: transform 0.5s ease-in-out; */
     }
 
-    header  nav > ul > li {
+    .mobile-header  nav > ul > li {
         text-align: center;
         display: block;
     }
